feat: add testing framework with vitest and implement auth service tests
- Refactored config to export a function for better environment variable handling.
- Changed token utility to use named export for better clarity.
- Added unit tests for signIn and signUp functionalities in authService.
- Created vitest configuration for running tests and generating coverage reports.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -29,5 +30,10 @@
     "redis": "^5.9.0",
     "terminal": "^0.1.4",
     "winston": "^3.18.3"
+  },
+  "devDependencies": {
+    "@vitest/coverage-v8": "^4.0.15",
+    "vite": "^7.3.0",
+    "vitest": "^4.0.15"
   }
 }
